--- a/Task_2_StaticWebpagee/login.html
+++ b/Task_2_StaticWebpagee/login.html
@@ -51,7 +51,8 @@
     </div>
     <p class="text-center text-gray-600">
       New to Lumera?
-      <a href="#" class="text-green-500 font-medium hover:underline">Create an account</a>
+      <a href="#" class="text-green-500 font-medium hover:underline">Create an account.</a>
+      <a href="index.html" class="text-red-500 font-medium hover:underline">Go Back</a>
     </p>
   </div>
 
